* 1.14.0
- revert from 'mgarepo' fork name to original 'repsys' name

* 1.13.4
- document 'github clone' command

* 1.13.3
- fix $SVN_SSH not necessarily properly being set, breaking non-ssh fallback

* 1.13.2
- Corrections for 'putsrpm' command
- Fix rpm command for unpacking source RPMs
- Fix typo in CHANGES

* 1.13.1
- automatically fallback to non-ssh (ie. svn:// rather than svn+ssh://) when
  authentication fails
- move detectVCS() to separate module to prevent import order
- fix 'mgarepo sync -d' for git-svn repos
- update upload_binary() to properly use newer execcmd()
- redirect stdin, as required for ssh session invoked through binrepo

* 1.13.0
- implement 'clone' command with support for quick git-svn cloning
- implement 'github' command initial support for github integration
- implement 'buildrpm' command for easy package building from local package
  repository
	o implement automatic satisfaction of build dependencies using urpmi
	o implement automatic satisfaction of build dependencies using DNF
- implement support for generating complete %changelog with full packager
  names & mail addresses in entries
- refactorize & clean up much of code
- fix python 3 issue with bytes strings, properly converting them to utf-8
- make execcmd() safe by only accepting individual arguments through a
  list/tuple rather than accepting strings of arguments run through shell
- fetch svn log in xml format for more reliable parsing using ElementTree
- use setuptools rather than distutils
- enable (optional) automatic rpmlint checking of packages
- various minor bug fixes and improvements...

* 1.12.3
- syntax correction

* 1.12.2
- Suppress prefix with no effect on import command (cf 1.12.0)
- Add a retry with building srpm in case of error in getrelease when creating a srpm

* 1.12.1
- prefix the command svn log without LC_ALL=C (mga#73)

* 1.12.0
- revert the prefix suppression for local language, it causes pb with import command

* 1.11.11